jumbotron with portfolio logo and button to link github profile

--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
     </div>
   </nav>
 
+    <!--jumbotorn display here-->
+  <header class="jumbotrn">
+    <img src="./image/protfolio.png"/>
+    <p>Hi my name is Ajin Thapa and i'm full stack developer at edX.</p>
+    <p>
+      <a class="btn btn-primary btn-lg btn" href="https://github.com/AjinThapa2000" role="button">Github Profile!</a>
+    </p>
+  </header>
+
 
   
     
