about section with my custom logo and button of download my resume with logo kit from fontawesome

--- a/index.html
+++ b/index.html
@@ -171,6 +171,28 @@
     </div>    
   
   </section>
+  <!---About me contain display here-->
+  <section>
+    <div class="container customcon" id="about">
+      <div class="row align-items-center">
+        <div class="col-lg-5 order-lg-2">
+          <img class="img-fluid" src="./image/ajin.png">
+        </div>
+
+        <div class="col-lg-7 order-lg-1 text-white" >
+          <div class="p-5">
+            <h2 class="display-4">About me</h2>
+            <p>Hi my name is Ajin Thapa and i'm learning code as full stack developer on bootcamp through this bootcamp i'm gona learn more about HTML,CSS, BOOTSTRAP, JAVA SCRIPT and APIs.</p>
+            <a href="" class="btn btn-outline-light">
+              <i class="fa-solid fa-download"></i>
+              Download my resume
+            </a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
 
 
   
