footer workout and diployement of webpage

--- a/index.html
+++ b/index.html
@@ -194,6 +194,41 @@
     </div>
   </section>
 
+  <!------footer contain are display here-->
+  
+  <footer class="footer bg-light p-4 customfot" id="contact">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 h-100 text-center mx-auto">
+          <ul class="list-inline-item mb-0">
+            <li class="list-inline-item mr-3">
+              <a href="#">
+                <i class="fab fa-linkedin fa-3x fa-fw"></i>
+              </a>
+            </li>
+            <li class="list-inline-item mr-3">
+              <a href="#">
+                <i class="fab fa-twitter-square fa-3x fa-fw"></i>
+              </a>
+            </li>
+            <li class="list-inline-item mr-3">
+              <a href="#">
+                <i class="fab fa-github-square fa-3x fa-fw"></i>
+              </a>
+            </li>
+            <li class="list-inline-item mr-3">
+              <a href="#">
+                <i class="fab fa-facebook-square fa-3x fa-fw"></i>
+              </a>
+            </li>
+          </ul>
+          <p class="text-muted small p-4">@copyright 2023 ajinT</p>
+        </div>
+      </div>
+    </div>
+
+  </footer>
+
 
   
     
