--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
       <div class="col-lg-4">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140">
-          <image href="./image/css.png" height="100%" width="100%"></image>
+          <image href="./image/js.png" height="100%" width="100%"></image>
         </svg>
         <h2>Cascading Style Sheets</h2>
         <P>Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML.</P>
@@ -228,14 +228,6 @@
     </div>
 
   </footer>
-
-
-  
-    
-
-
-
-    
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
