myskills image loading resolving

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
       <div class="col-lg-4">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140">
-          <image href="./image/css.png" height="100%" width="100%"></image>
+          <image href="./image/cs.png" height="100%" width="100%"></image>
         </svg>
         <h2>Cascading Style Sheets</h2>
         <P>Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML.</P>
